--- a/PTDA_2020 (1)/src/main/java/Adminstrador/ProdutosAdicionados.form
+++ b/PTDA_2020 (1)/src/main/java/Adminstrador/ProdutosAdicionados.form
@@ -14,6 +14,9 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[900, 550]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -115,7 +118,7 @@
                   <Component id="erro" min="-2" max="-2" attributes="0"/>
                   <Component id="progressBar" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="27" max="32767" attributes="0"/>
+              <EmptySpace pref="89" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="botaoProximo" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="botaoAnterior" alignment="3" min="-2" max="-2" attributes="0"/>
